@@ -1,5 +1,10 @@
 2008-02-12  kitone  <kitone@gna.org>
 
+	* src/actions/ViewManager.cc:
+	Small improvements in View Manager like sensitive.
+
+2008-02-12  kitone  <kitone@gna.org>
+
 	* src/Makefile.am:
 	* src/actions/ViewModes.cc:
 	Rename ViewModes.cc by ViewManager.cc
